# gqlite

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: Error.h  GQLlite.h  GQliteImpl.h  Graph.h  Memory.h  Node.h  ParserEngine.h  Platform.h  Program.h  QueryEngine.h  StorageEngine.h  VirtualEngine.h  gqlite.h
include/Rule/: AST.h  GramarRule.h  Rule.h
include/Type/: Hash.h
src/: GQLiteImpl.cpp  GQLlite.cpp  Memory.cpp  Platform.cpp  Program.cpp  VirtualEngine.cpp  gqlite.cpp
src/ParserEngine/: ParserEngine.cpp
src/StorageEngine/: Graph.cpp  StorageEngine.cpp
src/Type/: Hash.cpp
test/: CMakeLists.txt  grammar.cpp
